# relune

./: .gitattributes  .gitignore  .goreleaser.yaml  .octocov.yaml  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  deny.toml  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: dependabot.yml
crates/relune-app/: Cargo.toml
crates/relune-app/src/: error.rs  lib.rs  request.rs  result.rs  schema_input.rs
crates/relune-app/src/usecases/: diff.rs  doc.rs  export.rs  inspect.rs  lint.rs  mod.rs  render.rs
crates/relune-app/tests/: diff_filter_grouping_regression.rs  fixture_render_audit.rs  layout_json_regression_matrix.rs
crates/relune-app/tests/snapshots/: fixture_render_audit__fixture_render_audit__cyclic_fk.snap  fixture_render_audit__fixture_render_audit__ecommerce.snap  fixture_render_audit__fixture_render_audit__join_heavy.snap  fixture_render_audit__fixture_render_audit__multi_schema.snap  fixture_render_audit__fixture_render_audit__simple_blog.snap  layout_json_regression_matrix__layout_regression__cyclic_fk__bottom_to_top.snap  layout_json_regression_matrix__layout_regression__cyclic_fk__left_to_right.snap  layout_json_regression_matrix__layout_regression__cyclic_fk__right_to_left.snap  layout_json_regression_matrix__layout_regression__cyclic_fk__top_to_bottom.snap  layout_json_regression_matrix__layout_regression__ecommerce__bottom_to_top.snap  layout_json_regression_matrix__layout_regression__ecommerce__left_to_right.snap  layout_json_regression_matrix__layout_regression__ecommerce__right_to_left.snap  layout_json_regression_matrix__layout_regression__ecommerce__top_to_bottom.snap  layout_json_regression_matrix__layout_regression__join_heavy__bottom_to_top.snap  layout_json_regression_matrix__layout_regression__join_heavy__left_to_right.snap  layout_json_regression_matrix__layout_regression__join_heavy__right_to_left.snap  layout_json_regression_matrix__layout_regression__join_heavy__top_to_bottom.snap  layout_json_regression_matrix__layout_regression__multi_schema__bottom_to_top.snap  layout_json_regression_matrix__layout_regression__multi_schema__left_to_right.snap  layout_json_regression_matrix__layout_regression__multi_schema__right_to_left.snap  layout_json_regression_matrix__layout_regression__multi_schema__top_to_bottom.snap  layout_json_regression_matrix__layout_regression__simple_blog__bottom_to_top.snap  layout_json_regression_matrix__layout_regression__simple_blog__left_to_right.snap  layout_json_regression_matrix__layout_regression__simple_blog__right_to_left.snap  layout_json_regression_matrix__layout_regression__simple_blog__top_to_bottom.snap
crates/relune-cli/: Cargo.toml
crates/relune-cli/src/: cli.rs  config.rs  doctor.rs  error.rs  main.rs  output.rs  png.rs
crates/relune-cli/src/commands/: diff.rs  doc.rs  export.rs  input.rs  inspect.rs  lint.rs  mod.rs  render.rs
crates/relune-cli/tests/: e2e_tests.rs  integration_tests.rs  snapshot_tests.rs
crates/relune-cli/tests/snapshots/: integration_tests__config_unknown_nested_key.snap  integration_tests__config_unknown_root_key.snap  integration_tests__export_tests__export_layout_json__simple_blog__left_to_right__curved.snap  integration_tests__render_broken_sql.snap  integration_tests__render_missing_input.snap  integration_tests__render_nonexistent_file.snap  snapshot_tests__help_diff.snap  snapshot_tests__help_doc.snap  snapshot_tests__help_export.snap  snapshot_tests__help_inspect.snap  snapshot_tests__help_lint.snap  snapshot_tests__help_render.snap  snapshot_tests__help_root.snap  snapshot_tests__version.snap
crates/relune-core/: Cargo.toml
crates/relune-core/src/: config.rs  diagnostic.rs  diff.rs  export.rs  graph.rs  layout.rs  lib.rs  lint.rs  model.rs
crates/relune-core/tests/: integration_tests.rs
crates/relune-introspect/: Cargo.toml
crates/relune-introspect/src/: catalog.rs  common.rs  connect.rs  error.rs  lib.rs  url.rs
crates/relune-introspect/src/mysql/: catalog.rs  mod.rs
crates/relune-introspect/src/postgres/: catalog.rs  map.rs  mod.rs
crates/relune-introspect/src/sqlite/: catalog.rs  mod.rs
crates/relune-introspect/tests/: integration_test.rs
crates/relune-layout/: Cargo.toml
crates/relune-layout/src/: channel.rs  diagram_export.rs  focus.rs  graph.rs  layout.rs  lib.rs  order.rs  overlay.rs  port.rs  rank.rs  route.rs
crates/relune-layout/src/route/: geometry.rs  mod.rs  obstacle.rs
crates/relune-parser-sql/: Cargo.toml
crates/relune-parser-sql/src/: lib.rs
crates/relune-parser-sql/src/snapshots/: relune_parser_sql__tests__snapshot_tests__fixture_broken_input.snap  relune_parser_sql__tests__snapshot_tests__fixture_cyclic_fk.snap  relune_parser_sql__tests__snapshot_tests__fixture_ecommerce.snap  relune_parser_sql__tests__snapshot_tests__fixture_join_heavy.snap  relune_parser_sql__tests__snapshot_tests__fixture_multi_schema.snap  relune_parser_sql__tests__snapshot_tests__fixture_mysql_ecommerce.snap  relune_parser_sql__tests__snapshot_tests__fixture_simple_blog.snap  (+1 more)
crates/relune-render-html/: .oxfmtrc.jsonc  Cargo.toml  build.rs  esbuild.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
crates/relune-render-html/src/: components.rs  css.rs  error.rs  html.rs  lib.rs  metadata.rs  options.rs
crates/relune-render-html/ts/: collapse.ts  edge_filters.ts  filter_engine.ts  filter_engine_dom.ts  filter_engine_state.ts  group_toggle.ts  group_toggle_dom.ts  highlight.ts  highlight_actions.ts  highlight_dom.ts  highlight_state.ts  load_motion.ts  metadata.ts  minimap.ts  pan_zoom.ts  pan_zoom_dom.ts  pan_zoom_state.ts  search.ts  search_actions.ts  shortcuts.ts  type_filter.ts  type_filter_dom.ts  type_filter_state.ts  url_state.ts  viewer_api.ts
crates/relune-render-svg/: Cargo.toml
crates/relune-render-svg/src/: edge.rs  error.rs  escape.rs  geometry.rs  group.rs  legend.rs  lib.rs  markers.rs  node.rs  options.rs  theme.rs
crates/relune-testkit/: Cargo.toml
crates/relune-testkit/src/: lib.rs
crates/relune-wasm/: Cargo.toml
crates/relune-wasm/src/: error.rs  lib.rs  request.rs
(+61 files in other folders)
