[package]
name = "relune-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "relune"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
relune-app = { path = "../relune-app", features = ["introspect"] }
relune-core = { path = "../relune-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
resvg.workspace = true
tempfile = "3"
toml = "1.1"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
insta.workspace = true
portable-pty = "0.9"
predicates = "3.1"
relune-testkit = { path = "../relune-testkit" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite"] }
tempfile = "3"
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres", "mysql"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
