[package]
name = "relune-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
petgraph.workspace = true
serde.workspace = true
serde_json = { workspace = true }
sqlparser.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
