[package]
name = "relune-introspect"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
relune-core = { path = "../relune-core" }
serde.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite"] }
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
tracing.workspace = true

[dev-dependencies]
relune-parser-sql = { path = "../relune-parser-sql" }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres", "mysql"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
