[package]
name = "relune-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
relune-core = { path = "../relune-core" }
petgraph.workspace = true
serde.workspace = true
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
