[package]
name = "relune-parser-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
relune-core = { path = "../relune-core" }
sqlparser.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
