[package]
name = "relune-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
insta.workspace = true
relune-core = { path = "../relune-core" }
relune-layout = { path = "../relune-layout" }
relune-render-svg = { path = "../relune-render-svg" }
serde_json.workspace = true

[lints]
workspace = true
